css/styles.css
.navbar {
  background-color: transparent;
}

#about {
  margin-top: 300px;
  background-color: #ECECEC;
}

#projects {
  margin-top: 300px;
  /* margin-bottom: 300px; */
  /* height: 100%; */
  background-color: #ECECEC;
}

html, body{
  height: 100%;
  font-family: 'Merriweather', serif;
}

body{
  background-color: #ECECEC;
}

.intro {
  background: url("../img/header.JPG")no-repeat center center;
  background-size: cover;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.intro-main-text {
  color: black;
  font-size: 35px;
  font-weight: bolder;
}

.intro-sub-text {
  color: black;
  font-size: 25px;
}

.header-text {
  font-size: 80px;
  margin-bottom: 30px;
  border-bottom: 1px solid black;
  justify-content: center;
  align-items: center;
}

.about-me-text {
  font-size: 25px;
}

#skills .header-text {
  font-size: 40px;
}

#projects .header-text {
  border-bottom: 0;
}

#projects .row {
  margin-top: 50px;
}

.project-art1 {
  height: 400px;
  background: url("../img/chess.JPG") no-repeat center;
  background-size: cover;
  display:flex;
  align-items: center;
  justify-content: center;
}
.project-art2 {
  height: 400px;
  background: url("../img/music.JPG") no-repeat center;
  background-size: cover;
  display:flex;
  align-items: center;
  justify-content: center;
}
.project-art3 {
  height: 400px;
  background: url("../img/robot.JPG") no-repeat center;
  background-size: cover;
  display:flex;
  align-items: center;
  justify-content: center;
}
.project-art4 {
  height: 400px;
  background: url("../img/iphone.JPG") no-repeat center;
  background-size: cover;
  display:flex;
  align-items: center;
  justify-content: center;
}

.project-description {
  background-color: rgba(35,40,46,0.8);
  color: rgba(255,255,255,0.8);

  text-align: center;

  padding: 10px;
  height: 40%;
  width: 80%;
}
.purple-bg{
  background-color: rgba(100,100,230,0.8);
  border-color: rgba(100,100,2300,0.8);
  color: rgba(255,255,255,0.8);
  padding: 0;
  width: 80%;
}

.purple-bg:hover {
  background-color: rgba(100,100,230,0.8);
  border-color: rgba(100,100,2300,0.8);
}

.contact-footer {
  padding: 40px 0;
  background-color: #ECECEC;
}

.contact-footer a {
  color: #333;
}

.contact-footer .social:hover {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -o-transform: scale(1.1);
}

.contact-footer .social {
  -webkit-transform: scale(0.8);
  /* Browser Variations: */

  -moz-transform: scale(0.8);
  -o-transform: scale(0.8);
  -webkit-transition-duration: 0.5s;
  -moz-transition-duration: 0.5s;
  -o-transition-duration: 0.5s;
}
.contact-footer #social-gh:hover, #social-em:hover, #social-li:hover{
  color: #f39c12;
}

.contact-footer .container {
  text-align: center;
}

